# sensipy

./: .gitignore  README.md  paper.md  pyproject.toml  setup.py
.github/workflows/: arxiv-pdf.yml  ci.yml  draft-pdf.yml  release.yml
docs/: astro.config.mjs  generate_plots.py  package.json
docs/src/components/: SensipyLogo.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/getting_started/: ebl_models.mdx  exposure.mdx  followups.mdx  installation.mdx  irfs.mdx  overview.mdx  sensitivity.mdx  setup.mdx  spectral_models.mdx
docs/src/content/docs/reference/: ctaoirf.mdx  detectability.mdx  followup.mdx  index.mdx  sensitivity.mdx  source.mdx
docs/src/content/docs/tutorials/: basic_workflow.mdx  calculating_sensitivity.mdx  followup_analysis.mdx  index.mdx  loading_irfs.mdx  simulating_observations.mdx
paper/: arxiv.md  paper.bib  paper.md
paper/preprint/: arxiv.md  paper.bib
paper/preprint/arxiv-submission/: README.md  arxiv.tex  cleanup.sh  create-submission-zip.sh  generate-latex.sh
src/sensipy/: ctaoirf.py  detectability.py  followup.py  logging.py  plot.py  sensitivity.py  source.py  util.py
src/sensipy/data/: create_mock_data.py  create_mock_lookup.py  create_sample_lookup.py
src/sensipy/data/mock_data/: GRB_42_mock.csv  GRB_42_mock.fits  GRB_42_mock_metadata.csv  detectability_lookup.parquet  sample_lookup_table.parquet
src/sensipy/scripts/: download_irfs.py
tests/: conftest.py  test_ctaoirf.py  test_detectability.py  test_followup.py  test_logging.py  test_plot.py  test_sensitivity.py  test_source.py  test_util.py
(+8 files in other folders)
