[project]
name = "sensipy"
version = "3.6.1"
description = "Calculate sensitivity curves and observation times for variable high-energy astrophysical sources"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astropy>=6.0",
    "matplotlib>=3.8,<3.10",
    "pandas>=2.3.3",
    "pydantic>=2.12.0",
    "scipy>=1.16.2",
    "seaborn>=0.13.0",
    "tqdm>=4.67.1",
    "gammapy @ git+https://github.com/gammapy/gammapy.git@v1.2",
    "pyarrow>=21.0.0",
    "numpy>=1.26.4",
    "types-seaborn>=0.13.2.20250914",
    "pandas-stubs>=2.3.2.250926",
    "scipy-stubs>=1.16.3.0",
    "pytest-xdist[psutil]>=3.8.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "mypy>=1.18.2",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.4",
]

[[tool.mypy.overrides]]
module = ["gammapy.*", "astropy.*", "regions.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
